<resources>
    <string name="app_name">Coroutine Samples</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="main_screen_title">Coroutine Samples</string>
    <string name="clock">Clock</string>
    <string name="timer">Timer</string>
    <string name="food_factory">Food factory</string>
    <string name="api_fetching">API fetching</string>
    <string name="clock_fragment_label">Clock</string>
    <string name="clock_description">This clock is brought to you thanks to <tt>SharedFlow</tt> hot streams! 😎</string>
    <string name="clock_explanation">This clock works by using a Clock object that returns a <tt>SharedFlow</tt> created by using a flow which adds <tt>1000L</tt> every second to a time variable then <tt>emit</tt>s it.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timer_description">Timer brought to you thanks to Flow Cold Streams and Channels!</string>
    <string name="post_list">Post List</string>
    <string name="post_detail">Post Detail</string>
    <string name="api_fetch_description">This list of placeholder posts comes from an external API using Retrofit, Flow and coroutines!</string>
</resources>