<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.home.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/clockButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textAlignment="center"
                android:background="@color/material_blue"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/clock"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/timerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textAlignment="center"
                android:background="@color/material_green"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/timer"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/foodFactoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textAlignment="center"
                android:background="@color/material_orange"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/food_factory"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/apiFetchingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textAlignment="center"
                android:background="@color/material_red"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/api_fetching"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>